--- a/pay/pay.html
+++ b/pay/pay.html
@@ -75,7 +75,7 @@
      	aliUrl: "HTTPS://QR.ALIPAY.COM/FKX08812RGZLO7WYTXKY86?t=1544262002118",
         
         // 用于动态生成二维码的API，一般不需要修改。
-        qrcodeApi: "https://www.zhihu.com/qrcode?url="    
+        qrcodeApi: "https://api.qrserver.com/v1/create-qr-code/?size=150x150&margin=10&data="    
         /*
         备用二维码api：
         http://s.jiathis.com/qrcode.php?url=
@@ -85,6 +85,7 @@
         http://qr.topscan.com/api.php?text=
         https://bshare.optimix.asia/barCode?site=weixin&url=
         https://www.zhihu.com/qrcode?url=
+	https://cikeblog.com/qr/?m=3&e=H&p=6&url=
         */
     }
     </script>
